chore: added all entities